# Linkedin_Data_Extractor

./: .env  AI_COMMENT_GENERATOR_README.md  IMPORTANT_README.md  README_CHATBOT.md  RICHARD_BOT_SUMMARY.md  Richard_linkedin_profile_data.xlsx  Skellett.json  ai_comment_app.py  ai_comment_generator.py  app.py  generate_comment.bat  get_texau_accounts.py  get_texau_platforms.py  linkedin_chatbot.py  linkedin_chatbot_cli.py  linkedin_chatbot_new.py  main.py  persona_comment_generator.py  pyproject.toml  requirements-rag.txt  run_ai_comment_generator.bat  run_app.py  run_comment_generator.py  run_richard_bot.bat  run_simple_richard_bot.bat  run_streamlit_app.py  run_with_no_watcher.py  simple_richard_bot.py  skellett_comments_with_post_content.xlsx  test_chatbot.py  texau_automation_demo.py
.streamlit/: config.toml
persona_chroma_db/: chroma.sqlite3
src/: config.py  logger.py
src/ai/: __init__.py  persona_rag_generator.py
src/api/: linkedin_api.py  texau_client.py
src/data/: data_processor.py
src/ui/: app.py  linkedin_comment_page.py
